2017-02-18  Markus Gans  <guru.mail@muenster.de>
	* Avoid scroll bar overshooting
	* Refactoring FListView::onMouseMove
	* Refactoring FDialog::initDialogMenu

2017-02-17  Markus Gans  <guru.mail@muenster.de>
	* Generalize scroll functions in FTextView
	* Refactoring FButtonGroup::drawLabel
	* Refactoring FToggleButton::drawLabel

2017-02-11  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FWidget::focusNextChild and FWidget::focusPrevChild
	* Refactoring FListView::onWheel
	* Refactoring FListView::drawColumnLabels
	* Refactoring FTerm::getSystemTermType
	* Rename getTermName() to getTermFileName()

2017-02-10  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FOptiMove::verticalMove and FOptiMove::horizontalMove
	* Refactoring FVTerm::getCharacter
	* Refactoring FWidget::drawBorder

2017-02-02  Markus Gans  <guru.mail@muenster.de>
	* Avoids flickering when redrawing a focused widget

2017-01-31  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FSwitch::drawCheckButton
	* Refactoring FWidget::redraw
	* Refactoring FMessageBox::init 
	* Refactoring FFileDialog::init 

2017-01-30  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FLabel::draw
	* Refactoring FFileDialog::readDir

2017-01-28  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FApplication::processKeyboardEvent
	* Shorter methods and a fix for recreating new windows 
	  in the window example

2017-01-25  Markus Gans  <guru.mail@muenster.de>
	* UTF-8 fix for Solaris

2017-01-24  Markus Gans  <guru.mail@muenster.de>
	* Fixes compiler errors for latest Cygwin versions
	* Widget color scheme settings moved to a separate class
	* The color palette redefinition now has its own class

2017-01-21  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut can now also be compiled under Cygwin
	* Fixed bug in FScrollView::scrollTo
	* Refactoring FStatusBar::drawKeys
	* Refactoring FListView::drawListLine

2017-01-17  Markus Gans  <guru.mail@muenster.de>
	* Small array optimizations in the examples
