@@ -1,3 +1,6 @@
+2017-02-19  Markus Gans  <guru.mail@muenster.de>
+	* Refactoring FTerm::init_termcaps
+
 2017-02-18  Markus Gans  <guru.mail@muenster.de>
 	* Avoid scroll bar overshooting
 	* Refactoring FListView::onMouseMove
